# frame-core-wip

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: 404.html  CLI.md  Contributing.md  architecture.md  glossary.md  index.html  index.md  installation.md  mkdocs.yml  plugins.md  sitemap.xml
docs/API/: api_reference.md
docs/Usage/: eq.md  metrics.md  prompt_examples.md
docs/categories/: .pages
docs/custom_templates/: module.html.jinja2
docs/plugins/: overview.md
examples/audio_transcription/: README.md  audio_transcription_plugin.py  main.py
examples/autonomous_vehicle/: README.md  autonomous_vehicle_plugin.py  main.py
examples/custom_behavior/: README.md  main.py
examples/framer_created_from_json/: README.md  cli.py  config.json  exported_framer_config.json  framer.json  main.py  test_cli.py
examples/framer_created_from_markdown/: README.md  framer.md  main.py
examples/framer_name_listener/: main.py
examples/gmail_plugin_example/: README.md  config.json  gmail_plugin.py  main.py  quickstart.py  token.json
examples/memory_interaction/: README.md  config.json  main.py  requirements.txt
examples/mood_lighting_plugin/: README.md  main.py  mood_lighting_plugin.py
examples/rules_based/: README.md  main.py  plugin_rule_example.py
examples/strategy_pattern/: main.py  security_system_example.py
examples/strategy_pattern_example/: README.md  bidding_simulation.py  main.py  task_management_simulation.py  trading_simulation.py
examples/streaming_response/: README.md  main.py
examples/sync_frame/: README.md  main.py
examples/sync_frame_example/: main.py
frame/: __init__.py  cli.py  frame.py  sync_frame.py
framer_created_from_json/: main.py
framer_created_from_markdown/: README.md  main.py
plugins/: PLUGIN_TEMPLATE.md
scripts/: roam_links_converter.py  serve_docs.py  setup_environment.sh
sync_frame/: __init__.py
venv2/: pyvenv.cfg
(+579 files in other folders)
