[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-ai"
version = "0.1.0"
description = "A multi-modal cognitive agent framework"
readme = "README.md"
authors = [
    { name = "Frame Team", email = "team@frame.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "aiohttp>=3.10.10",
    "asyncio>=3.4.3",
    "click>=8.1.7",
    "dataclasses-json>=0.6.7",
    "lmql>=0.7.3",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "structlog>=24.4.0",
    "typing_extensions>=4.12.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0", 
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.40",
    "mkdocstrings>=0.26.2"
]
all-plugins = [
    "frame-ai-plugin-audio",
    "frame-ai-plugin-local-inference",
    "frame-ai-plugin-vector-store", 
    "frame-ai-plugin-dspy",
    "frame-ai-plugin-memory"
]

[project.scripts]
frame = "frame.__main__:main"

[project.entry-points."frame.plugins"]
